--- a/Content/Site.css
+++ b/Content/Site.css
@@ -1,5 +1,13 @@
 ﻿/* Wrapping element */
 /* Set some basic padding to keep content from hitting the edges */
+
+:root {
+    --primary-color: dodgerblue;
+    --selection-color: white;
+    --text-hover-color: rgb(20, 19, 19);
+    /*color:;*/
+    /*color: dodgerblue*/
+}
 .body-content {
     margin-top: 15px;
     padding-left: 15px;
@@ -18,4 +26,101 @@ textarea {
     .body-content {
         padding: 0;
     }
+}
+
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
+:root {
+}
+
+nav {
+    background-color: var(--primary-color);
+    padding: 1rem;
+    box-shadow: 2px 5px 10px rgb(128, 128, 128, 1);
+}
+
+.navbar-nav {
+    display: flex;
+    flex-flow: column;
+    gap: .2rem;
+}
+
+.navbar-nav a {
+    color: ghostwhite !important;
+}
+
+.nav-link {
+    text-shadow: 1px 1px 2px gray;
+    border-radius: .5rem;
+    width: 100%;
+    padding: 2px 10px;
+}
+
+
+    .nav-link:hover {
+        /*box-shadow: 1px 1px 5px rgb(128, 128, 128, 1);*/
+        background-color: var(--selection-color);
+        color: var(--text-hover-color) !important;
+
+    }
+
+.nav-link > i {
+    margin:0px 10px 0px 0px;
+}
+
+main {
+    background-color: white;
+    height: 100%;
+    width: fit-content;
+    overflow: auto;
+    padding: .5rem;
+}
+
+.page-container {
+    background-color: blueviolet;
+    height: 100%;
+    display: flex;
+    overflow: hidden;
+}
+
+aside {
+    padding: .5rem;
+    width: max-content;
+    background-color: var(--primary-color);
+}
+
+ul {
+    display: flex;
+    flex-flow: column;
+    gap: .5rem;
+}
+
+#app {
+    display: flex;
+    background-color: brown;
+    flex-flow: column;
+    height: 100vh;
+    overflow: hidden;
+}
+
+.offcanvas-lg{
+    background-color:var(--primary-color);
+}
+
+.box-shadow {
+    box-shadow: 0px 0px 3px rgb(128, 128, 128, 1);
+}
+
+.offcanvas-header {
+    box-shadow: 0px 0px 5px gray;
+    width: 100%;
+    filter: brightness(0.4);
+}
+
+#navbarNavAltMarkup  navbar-nav  a{
+    width: 500px !important;
 }
